# otp-mcp-zendesk

./: DEPLOYMENT.md  Dockerfile  Makefile  README.md  glama.json  pyproject.toml  render.yaml  rest_api.py
otp_mcp/: server.py
