[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "otp-mcp-server"
version = "0.3.0"
description = "MCP Server for OTP"
authors = [
  {name = "Andrea Bonomi", email = "andrea.bonomi@example.com"},
]
readme = "README.md"
keywords = [ "otp", "mcp", "totp", "web-automation", "ai-tools", "mcp-server" ]
requires-python = ">=3.11"
dependencies = [
    "click",
    "fastmcp",
    "freakotp",
    "securid"
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.urls]
GitHub = "https://github.com/andreax79/otp-mcp"
Issues = "https://github.com/andreax79/otp-mcp/issues"

[project.scripts]
otp-mcp-server = "otp_mcp.__main__:main"

[tool.ruff]
line-length = 132

[tool.black]
line-length = 120

[tool.coverage.run]
source = ["otp_mcp"]

[tool.coverage.report]
exclude_lines = [ "# pragma: no cover", "if TYPE_CHECKING:" ]

[tool.isort]
profile = "black"
